Tue Oct 22 19:53:16 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (Init_heap): move logics from heap_pages_init() and remove
	  heap_pages_init().

Tue Oct 22 19:19:05 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: allow multiple heaps.
	  Now, objects are managed by page. And a set of pages is called heap.
	  This commit supports multiple heaps in the object space.

	  * Functions heap_* and rb_heap_t manages heap data structure.
	  * Functions heap_page_* and struct heap_page manage page data
	    strcuture.
	  * Functions heap_pagse_* and struct rb_objspace_t::heap_pages
	    maintains all pages.
	    For example, pagaes are allocated from the heap_pages.

	  See https://bugs.ruby-lang.org/projects/ruby-trunk/wiki/GC_design
	  and https://bugs.ruby-lang.org/attachments/4015/data-heap_structure_with_multiple_heaps.png
	  for more deitals.

	  Now, there is only one heap called `eden', which is a space for all
	  new generated objects.

Tue Oct 22 18:26:12 2013  Tanaka Akira  <akr@fsij.org>

	* lib/pp.rb (object_address_group): Use Kernel#to_s to obtain the class
	  name and object address.
	  This fix a problem caused by %p in C generates variable length
	  address.
	  Reported by ko1 via IRC.

Tue Oct 22 16:57:48 2013  Benoit Daloze  <eregontp@gmail.com>

	* file.c (File#expand_path): [DOC] improve documentation of File#expand_path.
	  Based on patch by Prathamesh Sonpatki. [ruby-core:57734] [Bug #9002]

Tue Oct 22 15:59:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): don't skip current directories if FNM_DOTMATCH
	  is given.  [ruby-core:53108] [Bug #8006]

Tue Oct 22 14:53:11 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: exterminate Zombies.
	  There is a bug that T_ZOMBIE objects are not collected.
	  Because there is a pass to miss finalizer postponed job
	  with multi-threading. This patch solve this issue.

	* vm_trace.c (rb_postponed_job_register_one): set
	  RUBY_VM_SET_POSTPONED_JOB_INTERRUPT(th) if another same job